fix: main section visibility

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -12,7 +12,7 @@ header {
 	position: fixed;
 }
 
-img {
+header img {
 	width: 96px;
 }
 
